# gpt_agent_2025_easyspub

./: .gitignore  README.md  pyproject.toml  requirements.txt
chap02/sec02/: gpt_basic.py  loadenv_gpt_basic.py
chap03/sec02/: multi_turn.py  single_turn.py
chap03/sec03/: streamlit_basic.py
chap04/deprecated/: summarize_document.py
chap04/output/: crop_model_summary.txt  crop_model_summary2.txt
chap04/sec01/: pdf_to_text.py  pdf_to_text_without_header_footer.py  summary.py
chap04/sec02/: pdf_summary.py  summary.py
chap05/audio/: guitar_meeting_note_corrected.docx  guitar_meeting_note_corrected.json  guitar_meeting_note_corrected.md  guitar_summary.md  싼기타_비싼기타.csv  싼기타_비싼기타_final.csv
chap05/sec01/: openai_api_whisper.ipynb
chap05/sec02/: huggingface_whisper.ipynb
chap05/sec03/: speaker_diarization.ipynb  whisper_stt.py  whisper_stt_0.py  whisper_stt_1.py
chap05/sec04/: summarize_and_correct.ipynb
chap06/sec01/: image_explanation.ipynb
chap06/sec02/: image_quiz_1.py  tts.ipynb
chap07/sec01/: gpt_functions.py  gpt_functions_0.py  what_time_is_it_streamlit.py  what_time_is_it_terminal.py  what_time_is_it_terminal_0.py  what_time_is_it_terminal_1.py
chap07/sec02/: gpt_functions.py  gpt_functions_0.py  stock_info_streamlit.py  stock_info_streamlit_0.py  stock_info_streamlit_1.py  yfinance.ipynb
chap08/sec01/: langchain_chatbot.ipynb  langchain_message_history.ipynb  langchain_multi_turn.py  test_with_message_history.py
chap08/sec02/: lcel.ipynb
chap08/sec03/: langchain_tool.ipynb  pydantic.ipynb  test_with_tools.py
chap09/data/: README.md
(+58 files in other folders)
