[project]
name = "gpt-agent-2025-easyspub"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.28",
    "langgraph>=0.6.4",
    "notebook>=7.4.5",
    "pymupdf>=1.26.3",
    "python-docx>=1.2.0",
    "streamlit>=1.48.0",
    "tabulate>=0.9.0",
    "yfinance>=0.2.65",
]
