[project]
name = "gpt-agent-2025-easyspub"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.30",
    "langchain-community>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-nomic>=0.1.4",
    "gpt4all>=2.8.2",
    "langgraph>=0.6.5",
    "pymupdf>=1.26.3",
    "pypdf>=6.0.0",
    "python-docx>=1.2.0",
    "yfinance>=0.2.65",
    "tabulate>=0.9.0",
    "streamlit>=1.48.1",
    "notebook>=7.4.5",
]
